--- a/rl_sar/policy/go2/himloco/config.yaml
+++ b/rl_sar/policy/go2/himloco/config.yaml
@@ -1,4 +1,4 @@
-# Copyright (c) 2024-2025 Ziqi Fan
+# Copyright (c) 2024-2025 Ziqi Fan (Modified by Sanghyun Kim)
 # SPDX-License-Identifier: Apache-2.0
 
 go2/himloco:
