Add velodyne_simulator as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = livox_laser_simulation
 	url = git@github.com:ggory15/livox_laser_simulation_ros2
 	branch = main
+[submodule "velodyne_simulator"]
+	path = velodyne_simulator
+	url = https://github.com/lmark1/velodyne_simulator
